# Mars-Tractor

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  README.md
Console/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  README.md
Console/assets/config/: GamepadMap.txt  default.xml
Console/doc/: Attributes  ContributionGuidelines.md  TODO.md
Console/lib/kbnet/include/: client_interface.hpp  message.h  server_interface.hpp  session.hpp
Console/lib/kbthread/include/: latch.h  threadpool.h  tsqueue.h
Console/lib/kbthread/libs/: kbthread.lib
Console/src/: CMakeLists.txt  client_interface.cc  client_interface.hpp  display.cpp  display.h  gamepad.cpp  gamepad.h  logview.cpp  logview.h  main.cpp  mainwindow.cpp  mainwindow.h  message.h  mtconstants.h  overlay.cpp  overlay.h  semaphore.h  session.cc  session.hpp  statusview.cpp  statusview.h  tsqueue.h
Console/src/forms/: display.ui  logview.ui  mainwindow.ui  statusview.ui
Console/test/: CMakeLists.txt  message.h  networktests.txt  server_interface.cc  server_interface.hpp  session.cc  session.hpp  testmain.cc
assets/config/: C920_Calibration.json  CameraCalibration.json
assets/overlay/: disconnected.svgz
dep/: Motor.h  TractorTest.cpp  controller.cpp  vision.cpp
doc/: GamepadMap.txt  Packages  TODO.txt
docs/: ContributionGuidelines.md  Doxyfile.in  PackageList.md  TODO.md
docs/docs/: annotated.html  axis_8cpp.html  axis_8h.html  axis_8h_source.html  button_8cpp.html  button_8h.html  button_8h_source.html  camera_8cpp.html  camera_8h.html  camera_8h_source.html  classAxis-members.html  classAxis.html  classButton-members.html  classButton.html  classDualshock-members.html  classDualshock.html  classMotion-members.html  classMotion.html  classPosition-members.html  classPosition.html  classTouchPad.html  classTrigger-members.html  classTrigger.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_87a455bccb09a92130c26a11a880c98a.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dualshock_8cpp.html  dualshock_8h.html  dualshock_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  menudata.js  motion_8cpp.html  (+13 more)
docs/docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+21 more)
roverOS/: chassis.py  roverOS.py  telemetry.py
roverOS/mission-control/: checkjs.py  client.py
roverOS/testing/: echo-server.py  input.py  motor.py  servo.py  streaming.sh  wifi.py
src/: main.cpp
src/console/: CMakeLists.txt  main.cpp
src/console/forms/: display.ui  logview.ui  mainwindow.ui  overlay.ui  statusview.ui
src/console/include/: client.hpp  display.h  gamepad.h  logview.h  mainwindow.h  overlay.h  statusview.h
src/console/libs/: client.cpp  display.cpp  gamepad.cpp  logview.cpp  mainwindow.cpp  overlay.cpp  statusview.cpp
src/include/: axis.h  button.h  camera.h  client.hpp  dualshock.h  event.h  motion.h  point.h  touchpad.h  trigger.h
src/libs/: axis.cpp  button.cpp  camera.cpp  client.cpp  dualshock.cpp  motion.cpp  touchpad.cpp  trigger.cpp
tests/: CMakeLists.txt  axisTests.cpp  buttonTests.cpp  cameraTests.cpp  clientTests.cpp  dsTest.cpp  gamepadTests.cpp  main.cpp  serverTests.cpp  tests.cpp
